<resources>
    <string name="app_name">LocaliserMonEnfant</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Suivant</string>
    <string name="skip">Passé</string>
    <string name="start">Démarrer</string>

    <string name="slide_1_title">Hello!</string>
    <string name="slide_1_desc">Découvrez la localisation de l\'enfant en ligne à partir de tout coin du monde.</string>

    <string name="slide_2_title">Hello!</string>
    <string name="slide_2_desc">Ecoutez ce qui se passe au tour de l\'enfant même si vous n\'êtes pas auprès de l\'enfant.</string>

    <string name="slide_3_title"></string>
    <string name="slide_3_desc">Apprenez à votre enfant à atteindre l\'objectif! Réalizer les rêves de votre enfant. </string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_password_hint_confirm">Confirmer mot de passe</string>
    <string name="register">S\'inscrire</string>
    <string name="alerady_have_account">Vous avez déjà \n un compte?</string>
    <string name="welcome">Bienvenue!</string>
    <string name="d_j_un_compte">Déjà un compte?</string>
    <string name="connexion">Connexion</string>
    <string name="new_register">Nouveau? S\'inscrire.</string>
    <string name="call">Appeler</string>
    <string name="close">Ouvrir</string>
    <string name="open">Fermer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Aminata Maiga</string>
    <string name="user_email">aminata.maiga@etu.umontpellier.fr</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="control">Control</string>
    <string name="sound_around">Son autour</string>
    <string name="bavarder">Bavarder</string>
    <string name="historic">Historique</string>
    <string name="trach_way">Tracer la voie</string>
    <string name="send_heart">Envoyer des coeurs</string>
    <string name="les_param_tres_de_l_enfant">Les paramétres de l\'enfant</string>
    <string name="ajouter_un_enfant">Ajouter un enfant</string>
    <string name="change_photo_name">Changer le et la photo de l\'enfant</string>
    <string name="update_location_frequency">La fréquence de la mise à jour</string>
    <string name="notify">Notifier à l\'entrée et la sortie des lieux</string>
    <string name="premium_account">Compte premium</string>
    <string name="about_application">A propos de l\'application</string>
    <string name="language">Langage</string>
    <string name="logout">Se déconnecter</string>
    <string name="child">Enfant</string>
    <string name="parent">Parent</string>
    <string name="title_activity_login_child2">LoginActivityChild2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_child">MainActivityChild</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adresse">Adresse</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="compte_enfant">Compte Enfant</string>
    <string name="code">Code</string>
    <string name="zone_parameter">Zone</string>
    <string name="tr_s_sensible">Très sensible</string>
    <string name="sensible">Sensible</string>
    <string name="moyen">Moyen</string>
    <string name="normale">Normale</string>
    <string name="default_notification_channel_id">notification_parent</string>
    <string name="upload_image">Télécharger une photo</string>
    <string name="t_l_charger">Télécharger</string>
</resources>