<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="registerViewModel"
            type="fr.umontpellier.localisermonenfant.activity.ResgisterViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorTernary"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context=".activity.RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/welcome"
                        android:textColor="@color/black" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputFirstName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextFirstName"
                                style="@style/modifiedEditText"
                                android:hint="@string/prenom"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:text="@={registerViewModel.FirstName_}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:hint="@string/nom"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:text="@={registerViewModel.LastName_}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:text="@={registerViewModel.Email_}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMobile"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextAdresse"
                                style="@style/modifiedEditText"
                                android:hint="@string/adresse"
                                android:inputType="textPostalAddress"
                                android:maxLines="1"
                                android:text="@={registerViewModel.Adresse_}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:text="@={registerViewModel.Password_}"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/signUpButton"
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="@{(v) -> registerViewModel.onSignUp(v)}"
                            android:text="@string/register" />

                        <Button
                            android:id="@+id/button_go_login"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/alerady_have_account"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/black" />

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="Autres"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_google_plus" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_side_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="false"

            android:src="@drawable/ic_back_img" />
    </RelativeLayout>
</layout>