<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerChildViewModel"
            type="fr.umontpellier.localisermonenfant.viewmodel.ChildRegisterViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddChildFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/compte_enfant"
                        android:textColor="@color/black" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputFirstName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:hint="@string/prenom">

                            <EditText
                                android:id="@+id/editTextFirstName"
                                style="@style/modifiedEditText"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:text="@={registerChildViewModel.FirstName}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:hint="@string/nom"
                            >

                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:text="@={registerChildViewModel.LastName}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:hint="@string/code">

                            <EditText
                                android:id="@+id/editTextCode"
                                style="@style/modifiedEditText"
                                android:inputType="number"
                                android:maxLines="1"
                                android:text="@={registerChildViewModel.code}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/addChidButton"
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="@{(v) -> registerChildViewModel.onRegisterChild(v)}"
                            android:text="Ajouter" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/black" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/black" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>